include/bison_c.h

/* ─── Opaque handles ─────────────────────────────────────────────────────── */

/**
 * @brief Opaque handle that represents a reference-counted `dynamic` object.
 *
 * Never dereference the pointer directly; always use the `bison_*` API
 * functions.  A null `bison_handle` (value `NULL`) indicates an invalid or
 * error state.
 */
typedef struct bison_handle_* bison_handle;
/**
 * @brief Hash type used for pre-hashed names in the C API.
 *
 * Values are produced by `bison_key()` and consumed by APIs that accept
 * hashed class identifiers and field names.
 */
typedef uint32_t bison_hash;
/* ─── Error codes ────────────────────────────────────────────────────────── */

/**
 * @brief Return codes used by all mutating Bison C API functions.
 *
 * Zero (`BISON_OK`) always means success.  Negative values are errors.
 */
typedef enum bison_error {
  BISON_OK = 0, /**< Success. */
  BISON_ERR_NULL = -1, /**< A required handle or pointer argument was NULL. */
  BISON_ERR_TYPE = -2, /**< The field holds a different type than requested. */
  BISON_ERR_NOT_FOUND = -3, /**< Method or field not found. */
  BISON_ERR_DUPLICATE =
      -4, /**< Attempted to add a duplicate class or method. */
  BISON_ERR_EXCEPTION = -5, /**< An unexpected C++ exception was caught. */
  BISON_ERR_PARSE = -6, /**< Input string failed to parse (JSON / YAML). */
} bison_error;
/* ─── C method callback type ─────────────────────────────────────────────── */

/**
 * @brief Function-pointer type for methods registered on dynamic objects.
 *
 * The callback receives:
 * @param self    The object on which the method is being called (mutable).
 * @param params  A separate object containing call arguments (read-only).
 * @param result  Output handle for the return value; the library allocates a
 *                new object; the callee must populate it and must **not**
 *                release @p result (the library takes ownership).
 * @param user    User-defined context pointer passed to `bison_add_method`.
 */
typedef void (*bison_method_fn)(
    bison_handle self,
    bison_handle params,
    bison_handle result,
    void* user);
/* ═══════════════════════════════════════════════════════════════════════════
 * Lifecycle
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Create a new, empty dynamic object.
 *
 * @param klass_name  Hashed name of the class (use `bison_key()` to compute);
 *                    pass `0` for an anonymous object.
 * @return New handle (ref-count 1) or `NULL` on allocation failure.
 *
 * @code{.c}
 * bison_handle h = bison_create(0);
 * // ... use h ...
 * bison_release(h);
 * @endcode
 */
BISON_API bison_handle bison_create(bison_hash klass_name);
/**
 * @brief Create a new dynamic object by class key using C++
 * `dynamic::instantiate`.
 *
 * This creates a new instance of the requested class in the specified
 * namespace.  Pass `0` for `ns_name` to use the global (default) namespace.
 *
 * @param ns_name     Hash of the namespace name (use `bison_key()`); pass
 *                    `0` for the global (default) namespace.
 * @param klass_name  Hashed class name (use `bison_key()` to compute).
 * @return New handle (ref-count 1) or `NULL` on allocation failure.
 */
BISON_API bison_handle
bison_instantiate(bison_hash ns_name, bison_hash klass_name);
/**
 * @brief Increment the reference count of @p h and return a new handle.
 *
 * Both @p h and the returned handle refer to the **same** underlying object.
 * Each must be released independently.
 *
 * @param h  A valid non-null handle.
 * @return A new handle sharing ownership, or `NULL` if @p h is `NULL`.
 */
BISON_API bison_handle bison_add_ref(bison_handle h);
/**
 * @brief Release a handle and decrement the reference count.
 *
 * When the reference count drops to zero the underlying `dynamic` object is
 * destroyed.  @p h must not be used after calling this function.
 *
 * @param h  Handle to release.  A `NULL` @p h is silently ignored.
 */
BISON_API void bison_release(bison_handle h);
/* ═══════════════════════════════════════════════════════════════════════════
 * Import helpers
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Parse a JSON string and return the root object as a handle.
 *
 * @param json  Null-terminated UTF-8 JSON string.
 * @return New handle (ref-count 1), or `NULL` on parse error.
 *
 * @code{.c}
 * bison_handle h = bison_from_json("{\"x\": 1}");
 * int32_t x = 0;
 * bison_get_int(h, bison_key("x"), &x);  // x == 1
 * bison_release(h);
 * @endcode
 */
BISON_API bison_handle bison_from_json(const char* json);
/**
 * @brief Parse a YAML string and return the root object as a handle.
 *
 * Uses the same type-coercion rules as `extensions::from_yaml` in the C++ API.
 *
 * @param yaml  Null-terminated UTF-8 YAML string.
 * @return New handle (ref-count 1), or `NULL` on parse error.
 *
 * @code{.c}
 * bison_handle h = bison_from_yaml("x: 1\ny: 2.5\n");
 * bison_release(h);
 * @endcode
 */
BISON_API bison_handle bison_from_yaml(const char* yaml);
/* ═══════════════════════════════════════════════════════════════════════════
 * Class registry
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Attribute metadata for a class or a field.
 *
 * Used by `bison_add_class` and `bison_add_field_*`.
 * Any `NULL` string pointer means the corresponding attribute is not set.
 * Pass `NULL` for the whole struct to register without any attributes.
 */
typedef struct bison_attributes {
  const char* display_name;     /**< Human-readable name, or `NULL`. */
  const char* description;      /**< Human-readable description, or `NULL`. */
  const char* category;         /**< Category group name, or `NULL`. */
  int         obsolete;         /**< Non-zero if deprecated. */
  const char* obsolete_message; /**< Deprecation message, or `NULL`. */
  int         required;         /**< Non-zero if required. */
} bison_attributes;
/**
 * @brief Register @p klass as a class prototype in a namespace.
 *
 * This registers @p klass as a class prototype in the named namespace.
 * Classes in different namespaces may share the same name without collision.
 * The `__namespace` field of @p klass is set automatically to @p ns_name.
 *
 * @param ns_name      Hash of the namespace name (use `bison_key()`); pass
 *                     `0` to register in the global (default) namespace.
 * @param klass        Handle whose `__class` field has already been set.
 *                     The library **does not** take ownership of @p klass.
 * @param parent_name  Hash of the parent class name (use `bison_key()`); pass
 *                     `0` for a root class.
 * @param meta         Optional attribute metadata; pass `NULL` for none.
 * @return `BISON_OK` on success, `BISON_ERR_DUPLICATE` if a class with the
 *         same name is already registered in @p ns_name, or `BISON_ERR_NULL`
 *         if @p klass is `NULL`.
 */
BISON_API bison_error bison_add_class(
    bison_hash ns_name,
    bison_handle klass,
    bison_hash parent_name,
    const bison_attributes* meta);
/**
 * @brief Look up a class in a namespace.
 *
 * Performs a direct lookup in the class registry for a class in the given
 * namespace and returns the registered class prototype.
 *
 * @param ns_name    Hash of the namespace name (use `bison_key()`); pass
 *                   `0` for the global (default) namespace.
 * @param klass_name Hash of the class name to look up (use `bison_key()`).
 * @return A **non-owning** handle for the found prototype, or `NULL` if not
 *         found.  Do **not** call `bison_release` on the returned handle.
 */
BISON_API bison_handle
bison_find_class(bison_hash ns_name, bison_hash klass_name);
/* ═══════════════════════════════════════════════════════════════════════════
 * Field access — scalar setters
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Set an `int32_t` field by hash key.
 * @param h     Target object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param value New value.
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_int(bison_handle h, bison_hash name, int32_t value);
/**
 * @brief Set a `float` field by hash key.
 * @param h     Target object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param value New value.
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_float(bison_handle h, bison_hash name, float value);
/**
 * @brief Set a `bool` field by hash key.
 * @param h     Target object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param value New value (non-zero = true).
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_bool(bison_handle h, bison_hash name, int value);
/**
 * @brief Set a `std::string` field by hash key.
 * @param h     Target object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param value Null-terminated string value (copied internally).
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_string(bison_handle h, bison_hash name, const char* value);
/**
 * @brief Set a nested `dynamic` object field by hash key.
 *
 * The library **increments** the ref-count of @p value so both the caller and
 * the owning object share the same underlying instance.
 *
 * @param h     Target object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param value Handle to set as the field value (may be `NULL` for a null ref).
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_object(bison_handle h, bison_hash name, bison_handle value);
/**
 * @brief Set an `int32_t` field by numeric (array) index.
 * @param h     Target object handle.
 * @param index Zero-based numeric index.
 * @param value New value.
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_int_at(bison_handle h, size_t index, int32_t value);
/**
 * @brief Set a `float` field by numeric index.
 * @param h     Target object handle.
 * @param index Zero-based numeric index.
 * @param value New value.
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_float_at(bison_handle h, size_t index, float value);
/**
 * @brief Set a string field by numeric index.
 * @param h     Target object handle.
 * @param index Zero-based numeric index.
 * @param value Null-terminated string (copied internally).
 * @return `BISON_OK` or an error code.
 */
BISON_API bison_error
bison_set_string_at(bison_handle h, size_t index, const char* value);
/* ═══════════════════════════════════════════════════════════════════════════
 * Field access — scalar getters
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Read an `int32_t` field by hash key.
 * @param h     Source object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param[out] out  Receives the value on success.
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error
bison_get_int(bison_handle h, bison_hash name, int32_t* out);
/**
 * @brief Read a `float` field by hash key.
 * @param h     Source object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param[out] out  Receives the value on success.
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error
bison_get_float(bison_handle h, bison_hash name, float* out);
/**
 * @brief Read a `bool` field by hash key.
 * @param h     Source object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param[out] out  Receives 1 (true) or 0 (false) on success.
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error bison_get_bool(bison_handle h, bison_hash name, int* out);
/**
 * @brief Read a string field by hash key.
 *
 * If @p buf is non-null the string is copied into @p buf (null-terminated)
 * up to @p buf_len bytes.  If @p buf is `NULL` only the required length is
 * returned in @p len_out.  @p len_out may be `NULL` if the caller does not
 * need the length.
 *
 * @param h        Source object handle.
 * @param name     Field name hash (use `bison_key()`).
 * @param buf      Output buffer (may be `NULL` to query length).
 * @param buf_len  Size of @p buf in bytes (including space for the null
 * terminator).
 * @param[out] len_out  Set to the string length (excluding null terminator).
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error bison_get_string(
    bison_handle h,
    bison_hash name,
    char* buf,
    size_t buf_len,
    size_t* len_out);
/**
 * @brief Read a nested object field by hash key.
 *
 * Returns a **new** handle (ref-count 1) that must be released by the caller.
 *
 * @param h     Source object handle.
 * @param name  Field name hash (use `bison_key()`).
 * @param[out] out  Set to the child handle on success (may be `NULL` for null
 *                  dynamic refs).
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error
bison_get_object(bison_handle h, bison_hash name, bison_handle* out);
/**
 * @brief Read an `int32_t` field by numeric index.
 * @param h     Source object handle.
 * @param index Zero-based numeric index.
 * @param[out] out  Receives the value on success.
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error
bison_get_int_at(bison_handle h, size_t index, int32_t* out);
/**
 * @brief Read a `float` field by numeric index.
 * @param h     Source object handle.
 * @param index Zero-based numeric index.
 * @param[out] out  Receives the value on success.
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error
bison_get_float_at(bison_handle h, size_t index, float* out);
/**
 * @brief Read a string field by numeric index.
 *
 * Same copy semantics as `bison_get_string`.
 *
 * @param h        Source object handle.
 * @param index    Zero-based numeric index.
 * @param buf      Output buffer (may be `NULL` to query length).
 * @param buf_len  Size of @p buf in bytes.
 * @param[out] len_out  Set to the string length.
 * @return `BISON_OK`, `BISON_ERR_TYPE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error bison_get_string_at(
    bison_handle h,
    size_t index,
    char* buf,
    size_t buf_len,
    size_t* len_out);
/**
 * @brief Return the number of array-like (numeric-key) elements.
 * @param h  Source object handle.
 * @return Element count, or 0 if @p h is `NULL`.
 */
BISON_API size_t bison_size(bison_handle h);
/* ═══════════════════════════════════════════════════════════════════════════
 * Methods
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Register a C callback as a named method on @p h.
 *
 * The callback @p fn is invoked whenever the method is called.
 *
 * @param h        Target object handle.
 * @param name     Method name hash (use `bison_key()`).
 * @param fn       Function pointer implementing the method.
 * @param user     Arbitrary user context (may be `NULL`).
 * @return `BISON_OK`, `BISON_ERR_DUPLICATE`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error bison_add_method(
    bison_handle h,
    bison_hash name,
    bison_method_fn fn,
    void* user);
/**
 * @brief Invoke a named method on @p h.
 *
 * @param h       Target object handle (becomes `self` inside the callback).
 * @param name    Method name hash (use `bison_key()`).
 * @param params  Handle containing call arguments (may be an empty object).
 * @param[out] result  Set to a **new** handle (ref-count 1) holding the return
 *                     value.  Caller must release it.
 * @return `BISON_OK`, `BISON_ERR_NOT_FOUND`, or `BISON_ERR_NULL`.
 */
BISON_API bison_error bison_call(
    bison_handle h,
    bison_hash name,
    bison_handle params,
    bison_handle* result);
/* ═══════════════════════════════════════════════════════════════════════════
 * Utility
 * ═════════════════════════════════════════════════════════════════════════ */

/**
 * @brief Compute the FNV-1a hash of a null-terminated string.
 *
 * This is the same hash function used internally by the C++ `"name"_key`
 * literal and `bdg::bison::hash()`.  Use it to prepare keys for functions that
 * accept pre-hashed `bison_hash` names (e.g. `bison_create`,
 * `bison_add_class`).
 *
 * @param name  Null-terminated string.
 * @return 32-bit FNV-1a hash with the high bit set.
 */
BISON_API bison_hash bison_key(const char* name);